force-app/main/default/objects/Close_Date_Pushed__e/Close_Date_Pushed__e.object-meta.xml
<CustomObject>
    <label>Close Date Pushed</label>
    <pluralLabel>Close Date Pushed</pluralLabel>
</CustomObject>