force-app/main/default/objects/Close_Date_Pushed__e/fields/Days_Pushed__c.field-meta.xml
<CustomField>
    <fullName>Days_Pushed__c</fullName>
    <label>Days Pushed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>