force-app/main/default/objects/Close_Date_Pushed__e/fields/Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>Opp_Id__c</fullName>
    <label>Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>